Mengambil data dari retrofit : Belum selesai, baru di Retro Server

--- a/app/src/main/res/layout/fragment_home_pertumbuhan.xml
+++ b/app/src/main/res/layout/fragment_home_pertumbuhan.xml
@@ -14,5 +14,4 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="Home Pertumbuhan Fragmen" />
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</RelativeLayout>
